# agent-forge

./: .gitignore  CLAUDE.md  GEMINI.md  README.ja.md  Taskfile.yml  pyproject.toml
.github/workflows/: test.yml
agent_forge/: CLAUDE.md  __init__.py  actions.py  cli.py  config.py  session.py
docs/: ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  FORGE_BLUEPRINT.md  FORGE_MANUAL.md  FORGE_RESOURCES.md  NEXT_PLAN.md  PHASE4_INSTRUCTIONS.md  PLAN.md  SCRIPTS_MANUAL.md  WorkingLog.md
docs/diary/: 20260128_claude.md  20260128_gemini.md  20260129_gemini.md  20260130_claude.md  20260130_claude_ffs.md  20260130_gemini_final.md
docs/prompts/: architect.md  implementer.md  reviewer.md
docs/specs/: 001-detailed-list.md
scripts/: ffs.sh  read.sh  send.sh
tests/: CLAUDE.md  test_actions.py  test_cli.py  test_cli_init.py  test_cli_list.py  test_cli_send_read.py  test_config.py  test_error_handling.py  test_session.py  test_stop.py  test_version.py
tests/e2e/: __init__.py  test_live_tmux.py
